# cardiac-ct-slicer-plugin

./: README.md  regained-ct-v2-1.ipynb  visionct2t-v1-0.ipynb
CardiacCT/: CMakeLists.txt
CardiacCT/CTOptimizer/: CMakeLists.txt  CTOptimizer.py
CardiacCT/CTOptimizer/Resources/UI/: CTOptimizer.ui
CardiacCT/CardiacMotionAnalysis/: CMakeLists.txt  CardiacMotionAnalysis.py
CardiacCT/CardiacMotionAnalysis/Resources/UI/: CardiacMotionAnalysis.ui
CardiacCT/CardiacVolumeAnalysis/: CMakeLists.txt  CardiacVolumeAnalysis.py
CardiacCT/CardiacVolumeAnalysis/Resources/UI/: CardiacVolumeAnalysis.ui
CardiacCT/CoronarySegmentation/: CMakeLists.txt  CoronarySegmentation.py
CardiacCT/CoronarySegmentation/Resources/UI/: CoronarySegmentation.ui
